update java sample